--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "API mocking service and interface for local development flows.",
   "main": "index.js",
-  "repository": "git@github.secureserver.net:mtekic/Loki.git",
-  "author": "Miljan Tekic <mtekic@godaddy.com>",
+  "repository": "git@github.com:miljantekic/Loki.git",
+  "author": "Miljan Tekic <miljan.tekic@gmail.com>",
   "license": "MIT"
 }
