--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Miljan Tekic <miljan.tekic@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.2",
     "lodash": "^4.17.4"
   }
 }
