--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "API mocking service and interface for local development flows.",
   "main": "index.js",
-  "repository": "git@github.com:miljantekic/Loki.git",
+  "repository": "git@github.com:miljantekic/loki-mock.git",
   "author": "Miljan Tekic <miljan.tekic@gmail.com>",
   "license": "MIT",
   "dependencies": {
