Added public folder to gitignore

--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,7 @@
 node_modules/
 src/client/node_modules/
 src/client/src/
+src/client/public/
 src/client/.gitignore
 src/client/package.json
 src/client/yarn.lock
